--- a/Mod Files/GameWyrm.OuterRelics/default-config.json
+++ b/Mod Files/GameWyrm.OuterRelics/default-config.json
@@ -1,3 +1,122 @@
 {
-  "enabled": true
+  "enabled": true,
+  "settings": {
+    "Pools (Locations / Total Possible Spawns)": {"type": "separator"},
+    "HourglassTwins": {
+      "title": "Hourglass Twins Locations (14/89)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Ember and Ash Twin"
+    },
+    "TimberHearth": {
+      "title": "Timber Hearth Locations (13/41)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Includes main planet and the Attlerock"
+    },
+    "BrittleHollow": {
+      "title": "Brittle Hollow Locations (13/94)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Includes main planet and White Hole Station"
+    },
+    "GiantsDeep": {
+      "title": "Giant's Deep Locations (10/43)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Includes every island, the core, and the Orbital Probe Cannon"
+    },
+    "DarkBramble": {
+      "title": "Dark Bramble Locations (4/10)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Each location is at an obvious point of interest that you need to leave your ship"
+    },
+    "QuantumMoon": {
+      "title": "Quantum Moon Locations (6/18)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Includes all six states"
+    },
+    "Interloper": {
+      "title": "Interloper Locations (2/10)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Includes both outside and inside locations, will be impossible to reach once consumed by the sun"
+    },
+    "Stranger": {
+      "title": "DLC: Main Area (4/44)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Requires Echoes of the Eye."
+    },
+    "DreamWorld": {
+      "title": "DLC: Sub-Area (5/41)",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Requires Echoes of the Eye."
+    },
+    "DreamWorldStealth": {
+      "title": "DLC: Sub-Area Lights Out (4/23)",
+      "type": "toggle",
+      "value": false,
+      "tooltip": "Requires Echoes of the Eye. Not for the faint of heart."
+    },
+    "HardMode": {
+      "title": "Obscure/Difficult Locations (5/13)",
+      "type": "toggle",
+      "value": false,
+      "tooltip": "Includes difficult locations, or locations only the truest of Outer Wilds fans know of."
+    },
+    "Addons": {
+      "title": "Addon Locations",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "If another mod has been made to support Outer Relics, their spawn locations will become available. It is up to the addon creator to provide customization options."
+    },
+    "Settings": {"type": "separator"},
+    "SingleMode": {
+      "title": "One Key Max Per Location",
+      "type": "toggle",
+      "value": true,
+      "tooltip": "Each location can only contain one key. Turn this off to allow multiple keys to appear in one location."
+    },
+    "Hints": {
+      "type": "selector",
+      "value": "Balanced",
+      "options": [
+        "Disabled",
+        "All Vague",
+        "Mostly Vague",
+        "Balanced",
+        "Mostly Precise",
+        "All Precise"
+      ],
+      "tooltip": "Select how many of your hints will be vague, only telling you part of the location, vs. how many will tell you exactly where to go. Disabled makes all hints useless"
+    },
+    "Useless Hint Chance": {
+      "type": "selector",
+      "value": 25,
+      "options": [
+        0,
+        25,
+        50,
+        75
+      ],
+      "tooltip": "Select the chance that a hint will be a joke statement rather than tell you where an item is. This does not generate misleading hints."
+    },
+    "Advanced": {"type": "separator"},
+    "Debug": {
+      "title": "Dev Mode",
+      "type": "toggle",
+      "value": false,
+      "tooltip": "Enables the ability to create placement info for addons, and adds a lot more debug information to the console."
+    },
+    "DryMode": {
+      "title": "Dry Runs",
+      "type": "toggle",
+      "value": false,
+      "tooltip": "When starting a new run, will generate a spoiler log with the given seed, but will not actually start a run or affect your save data"
+    }
+  }
 }
