--- a/OuterRelics/manifest.json
+++ b/OuterRelics/manifest.json
@@ -7,7 +7,8 @@
   "version": "1.0.0",
   "owmlVersion": "2.9.0",
     "dependencies": [
-        "_nebula.MenuFramework"
+        "_nebula.MenuFramework",
+        "dgarro.CustomShipLogModes"
     ],
     "pathsToPreserve": [
       "SaveData",
